# FreeNES

./: .gitignore  CMakeLists.txt  cleanup.sh
include/: debug.hpp
include/mos6502/: emulator.hpp
include/nes/: emulator.hpp  rom_header.hpp
output/: .gitignore
resources/cmake/: uninstall.cmake
source/: CMakeLists.txt  main.cpp
source/mos6502/: address.cpp  emulator.cpp  instruction.cpp  load_byte.cpp  load_store.cpp  load_word.cpp  memory.cpp  other.cpp  store.cpp
source/nes/: emulator.cpp
